[#497] Added fixes chip and selected filters. - Chip stories to better match parameters. - Padding to the selected label to align with selected chips. - Shifted selected filter to list module and padded story. - Made selected filters variables more consistent with other components.

--- a/components/02-molecules/selected-filters/selected-filters.scss
+++ b/components/02-molecules/selected-filters/selected-filters.scss
@@ -34,6 +34,10 @@
     @include ct-typography('label-regular');
 
     white-space: nowrap;
+
+    @include ct-breakpoint(m) {
+      padding-top: ct-spacing();
+    }
   }
 
   &__list {
